--- a/MIDTERM PROJECTS/MIDTERM PROJECTS.csproj
+++ b/MIDTERM PROJECTS/MIDTERM PROJECTS.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Arc.cs" />
     <Compile Include="Circle.cs" />
     <Compile Include="Elipse.cs" />
     <Compile Include="FillCircle.cs" />
