--- a/MIDTERM PROJECTS/MIDTERM PROJECTS.csproj
+++ b/MIDTERM PROJECTS/MIDTERM PROJECTS.csproj
@@ -61,6 +61,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Graphic.cs" />
+    <Compile Include="GroupGraphics.cs" />
     <Compile Include="Line.cs" />
     <Compile Include="Polygon.cs" />
     <Compile Include="Program.cs" />
