--- a/MIDTERM PROJECTS/MIDTERM PROJECTS.csproj
+++ b/MIDTERM PROJECTS/MIDTERM PROJECTS.csproj
@@ -67,8 +67,10 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RectangleGraphic.cs" />
+    <Compile Include="SolvingFlicker.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
